[package]
name = "uu_free"
version = "0.0.1"
edition = "2021"
authors = ["uutils developers"]
license = "MIT"
description = "free ~ (uutils) Display amount of free and used memory in the system"

homepage = "https://github.com/uutils/procps"
repository = "https://github.com/uutils/procps/tree/main/src/uu/free"
keywords = ["acl", "uutils", "cross-platform", "cli", "utility"]
categories = ["command-line-utilities"]


[dependencies]
uucore = { workspace = true }
clap = { workspace = true }
bytesize = { workspace = true }

sysinfo = { workspace = true }

[lib]
path = "src/free.rs"

[[bin]]
name = "free"
path = "src/main.rs"
