[package]
name = "uu_free"
version = "0.0.1"
edition = "2021"
authors = ["uutils developers"]
license = "MIT"
description = "free ~ (uutils) Display amount of free and used memory in the system"

homepage = "https://github.com/uutils/procps"
repository = "https://github.com/uutils/procps/tree/main/src/uu/free"
keywords = ["acl", "uutils", "cross-platform", "cli", "utility"]
categories = ["command-line-utilities"]

[dependencies]
bytesize = { workspace = true }
clap = { workspace = true }
sysinfo = { workspace = true }
uucore = { workspace = true }

[target.'cfg(target_os="windows")'.dependencies]
windows = { workspace = true, features = ["Wdk_System_SystemInformation", "Win32_System_ProcessStatus", "Win32_System_SystemInformation"] }

[lib]
path = "src/free.rs"

[[bin]]
name = "free"
path = "src/main.rs"
