[package]
name = "uu_free"
description = "free ~ (uutils) Display amount of free and used memory in the system"
repository = "https://github.com/uutils/procps/tree/main/src/uu/free"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
bytesize = { workspace = true }
clap = { workspace = true }
sysinfo = { workspace = true }
uucore = { workspace = true }

[target.'cfg(target_os="windows")'.dependencies]
windows = { workspace = true, features = ["Wdk_System_SystemInformation", "Win32_System_ProcessStatus", "Win32_System_SystemInformation"] }

[lib]
path = "src/free.rs"

[[bin]]
name = "free"
path = "src/main.rs"
