[package]
name = "uu_pgrep"
description = "pgrep ~ (uutils) look up, signal, or wait for processes based on name and other attributes"
repository = "https://github.com/uutils/procps/tree/main/src/uu/pgrep"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
clap = { workspace = true }
regex = { workspace = true }
rustix = { workspace = true, features = ["fs", "process", "thread"] }
uucore = { workspace = true, features = ["entries", "signals", "process"] }
walkdir = { workspace = true }

[lib]
path = "src/pgrep.rs"

[[bin]]
name = "pgrep"
path = "src/main.rs"
