[package]
name = "uu_pidof"
description = "pidof ~ (uutils) Find the process ID of a running program"
repository = "https://github.com/uutils/procps/tree/main/src/uu/pidof"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
uucore = { workspace = true, features = ["process"] }
clap = { workspace = true }
uu_pgrep = { path = "../pgrep" }

[lib]
path = "src/pidof.rs"

[[bin]]
name = "pidof"
path = "src/main.rs"
