[package]
name = "uu_pidwait"
version = "0.0.1"
edition = "2021"
authors = ["uutils developers"]
license = "MIT"
description = "pidwait ~ (uutils) Wait for processes based on name"

homepage = "https://github.com/uutils/procps"
repository = "https://github.com/uutils/procps/tree/main/src/uu/pidwait"
keywords = ["acl", "uutils", "cross-platform", "cli", "utility"]
categories = ["command-line-utilities"]


[dependencies]
nix = { workspace = true }
uucore = { workspace = true, features = ["entries"] }
clap = { workspace = true }
regex = { workspace = true }
uu_pgrep = { path = "../pgrep" }

[target.'cfg(unix)'.dependencies]
rustix = { version = "1", default-features = false, features = ["event", "process", "std"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_Threading"] }

[lib]
path = "src/pidwait.rs"

[[bin]]
name = "pidwait"
path = "src/main.rs"
