[package]
name = "uu_pidwait"
description = "pidwait ~ (uutils) Wait for processes based on name"
repository = "https://github.com/uutils/procps/tree/main/src/uu/pidwait"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
nix = { workspace = true }
uucore = { workspace = true, features = ["entries"] }
clap = { workspace = true }
regex = { workspace = true }
uu_pgrep = { path = "../pgrep" }

[target.'cfg(unix)'.dependencies]
rustix = { version = "1", default-features = false, features = ["event", "process", "std"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = ["Win32_Foundation", "Win32_System_Threading"] }

[lib]
path = "src/pidwait.rs"

[[bin]]
name = "pidwait"
path = "src/main.rs"
