[package]
name = "uu_pkill"
version = "0.0.1"
edition = "2021"
authors = ["uutils developers"]
license = "MIT"
description = "pgrep ~ (uutils) Kills processes based on name and other attributes."

homepage = "https://github.com/uutils/procps"
repository = "https://github.com/uutils/procps/tree/main/src/uu/pkill"
keywords = ["acl", "uutils", "cross-platform", "cli", "utility"]
categories = ["command-line-utilities"]


[dependencies]
uucore = { workspace = true }
clap = { workspace = true }
walkdir = { workspace = true }
regex = { workspace = true }
nix = { workspace = true, features = ["signal"] }

[lib]
path = "src/pkill.rs"

[[bin]]
name = "pkill"
path = "src/main.rs"
