[package]
name = "uu_pkill"
description = "pgrep ~ (uutils) Kills processes based on name and other attributes."
repository = "https://github.com/uutils/procps/tree/main/src/uu/pkill"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
uucore = { workspace = true, features = ["entries"] }
clap = { workspace = true }
walkdir = { workspace = true }
regex = { workspace = true }
nix = { workspace = true, features = ["signal"] }

uu_pgrep = { path = "../pgrep" }

[lib]
path = "src/pkill.rs"

[[bin]]
name = "pkill"
path = "src/main.rs"
