[package]
name = "uu_pmap"
description = "pmap ~ (uutils) Report memory map of a process"
repository = "https://github.com/uutils/procps/tree/main/src/uu/pmap"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
uucore = { workspace = true }
clap = { workspace = true }
dirs = { workspace = true }

[lib]
path = "src/pmap.rs"

[[bin]]
name = "pmap"
path = "src/main.rs"
