[package]
name = "uu_ps"
description = "ps - (uutils) Report a snapshot of the current processes"
repository = "https://github.com/uutils/procps/tree/main/src/uu/ps"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
uucore = { workspace = true, features = ["utmpx", "libc"] }
clap = { workspace = true }
chrono = { workspace = true, default-features = false, features = ["clock"] }
prettytable-rs = { workspace = true }
nix = { workspace = true }

uu_pgrep = { path = "../pgrep" }

[lib]
path = "src/ps.rs"

[[bin]]
name = "ps"
path = "src/main.rs"
