[package]
name = "uu_pwdx"
version = "0.0.1"
edition = "2021"
authors = ["uutils developers"]
license = "MIT"
description = "pwdx ~ (uutils) Report current working directory of a process"

homepage = "https://github.com/uutils/procps"
repository = "https://github.com/uutils/procps/tree/main/src/uu/pwdx"
keywords = ["acl", "uutils", "cross-platform", "cli", "utility"]
categories = ["command-line-utilities"]

[dependencies]
uucore = { workspace = true }
clap = { workspace = true }

[lib]
path = "src/pwdx.rs"

[[bin]]
name = "pwdx"
path = "src/main.rs"
