[package]
name = "uu_pwdx"
description = "pwdx ~ (uutils) Report current working directory of a process"
repository = "https://github.com/uutils/procps/tree/main/src/uu/pwdx"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
uucore = { workspace = true }
clap = { workspace = true }
sysinfo = { workspace = true }

[lib]
path = "src/pwdx.rs"

[[bin]]
name = "pwdx"
path = "src/main.rs"
