[package]
name = "uu_slabtop"
description = "slabtop ~ (uutils) Display kernel slab cache information in real time"
repository = "https://github.com/uutils/procps/tree/main/src/uu/slabtop"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
uucore = { workspace = true }
clap = { workspace = true }

[lib]
path = "src/slabtop.rs"

[[bin]]
name = "slabtop"
path = "src/main.rs"
