[package]
name = "uu_snice"
description = "snice - (uutils) send a signal or report process status"
repository = "https://github.com/uutils/procps/tree/main/src/uu/snice"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
uucore = { workspace = true, features = ["signals"] }
clap = { workspace = true }
libc = { workspace = true }
nix = { workspace = true }
prettytable-rs = { workspace = true }
thiserror = { workspace = true }
sysinfo = { workspace = true }

uu_pgrep = { path = "../pgrep" }

[lib]
path = "src/snice.rs"

[[bin]]
name = "snice"
path = "src/main.rs"
