[package]
name = "uu_sysctl"
description = "sysctl ~ (uutils) Show or modify kernel parameters at runtime"
repository = "https://github.com/uutils/procps/tree/main/src/uu/sysctl"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
uucore = { workspace = true }
clap = { workspace = true }
sysinfo = { workspace = true }
walkdir = { workspace = true }

[lib]
path = "src/sysctl.rs"

[[bin]]
name = "sysctl"
path = "src/main.rs"
