[package]
name = "uu_tload"
description = "tload ~ (uutils) graphic representation of system load average"
repository = "https://github.com/uutils/procps/tree/main/src/uu/tload"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
clap = { workspace = true }
crossterm = { workspace = true }
ratatui = { workspace = true }
uucore = { workspace = true }

[lib]
path = "src/tload.rs"

[[bin]]
name = "tload"
path = "src/main.rs"
