[package]
name = "uu_top"
version = "0.0.1"
edition = "2021"
authors = ["uutils developers"]
license = "MIT"
description = "top ~ (uutils) Display Linux processes"

homepage = "https://github.com/uutils/procps"
repository = "https://github.com/uutils/procps/tree/main/src/uu/top"
keywords = ["acl", "uutils", "cross-platform", "cli", "utility"]
categories = ["command-line-utilities"]

[dependencies]
uucore = { workspace = true, features = ["utmpx", "uptime"] }
clap = { workspace = true }
libc = { workspace = true }
nix = { workspace = true }
prettytable-rs = { workspace = true }
sysinfo = { workspace = true }
chrono = { workspace = true }
bytesize = { workspace = true }

uu_vmstat = { path = "../vmstat" }

[target.'cfg(target_os="windows")'.dependencies]
windows-sys = { workspace = true, features = [
    "Win32_System_RemoteDesktop",
    "Win32_System_SystemInformation",
] }


[target.'cfg(target_os="linux")'.build-dependencies]
pkg-config = "0.3.31"

[lib]
path = "src/top.rs"

[[bin]]
name = "top"
path = "src/main.rs"
