[package]
name = "uu_top"
description = "top ~ (uutils) Display Linux processes"
repository = "https://github.com/uutils/procps/tree/main/src/uu/top"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
uucore = { workspace = true, features = ["utmpx", "uptime"] }
clap = { workspace = true }
libc = { workspace = true }
nix = { workspace = true }
prettytable-rs = { workspace = true }
sysinfo = { workspace = true }
chrono = { workspace = true }
bytesize = { workspace = true }

uu_vmstat = { path = "../vmstat" }
uu_w = { path = "../w" }

[target.'cfg(target_os="windows")'.dependencies]
windows-sys = { workspace = true, features = [
    "Win32_System_RemoteDesktop",
    "Win32_System_SystemInformation",
] }


[target.'cfg(target_os="linux")'.build-dependencies]
pkg-config = "0.3.31"

[lib]
path = "src/top.rs"

[[bin]]
name = "top"
path = "src/main.rs"
