[package]
name = "uu_top"
description = "top ~ (uutils) Display Linux processes"
repository = "https://github.com/uutils/procps/tree/main/src/uu/top"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
uucore = { workspace = true, features = ["utmpx", "uptime", "signals"] }
clap = { workspace = true }
crossterm = { workspace = true }
libc = { workspace = true }
nix = { workspace = true }
ratatui = { workspace = true, features = ["crossterm"] }
sysinfo = { workspace = true }
chrono = { workspace = true }
bytesize = { workspace = true }

uu_vmstat = { path = "../vmstat" }
uu_w = { path = "../w" }

[target.'cfg(target_os="windows")'.dependencies]
windows-sys = { workspace = true, features = [
    "Wdk_System_SystemInformation",
    "Win32_System_RemoteDesktop",
] }


[target.'cfg(target_os="linux")'.build-dependencies]
pkg-config = "0.3.31"

[lib]
path = "src/top.rs"

[[bin]]
name = "top"
path = "src/main.rs"
