[package]
name = "uu_vmstat"
description = "vmstat ~ (uutils) Report virtual memory statistics."
repository = "https://github.com/uutils/procps/tree/main/src/uu/vmstat"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
bytesize = { workspace = true }
clap = { workspace = true }
jiff = { workspace = true }
terminal_size = { workspace = true }
uucore = { workspace = true }

uu_slabtop = {path = "../slabtop"}

[lib]
path = "src/vmstat.rs"

[[bin]]
name = "vmstat"
path = "src/main.rs"
