[package]
name = "uu_w"
version = "0.0.1"
edition = "2021"
authors = ["uutils developers"]
license = "MIT"
description = "w ~ (uutils) Show who is logged on and what they are doing"

homepage = "https://github.com/uutils/procps"
repository = "https://github.com/uutils/procps/tree/main/src/uu/w"
keywords = ["acl", "uutils", "cross-platform", "cli", "utility"]
categories = ["command-line-utilities"]

[dependencies]
uucore = { workspace = true, features = ["utmpx"] }
clap = { workspace = true }

[lib]
path = "src/w.rs"

[[bin]]
name = "w"
path = "src/main.rs"
