[package]
name = "uu_w"
description = "w ~ (uutils) Show who is logged on and what they are doing"
repository = "https://github.com/uutils/procps/tree/main/src/uu/w"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
uucore = { workspace = true, features = ["utmpx", "uptime"] }
clap = { workspace = true }
chrono = { workspace = true, default-features = false, features = [
  "clock",
] }
libc = { workspace = true }

[lib]
path = "src/w.rs"

[[bin]]
name = "w"
path = "src/main.rs"
