[package]
name = "uu_watch"
version = "0.0.1"
edition = "2021"
authors = ["uutils developers"]
license = "MIT"
description = "watch ~ (uutils) Execute a program periodically, showing output fullscreen"

homepage = "https://github.com/uutils/procps"
repository = "https://github.com/uutils/procps/tree/main/src/uu/watch"
keywords = ["acl", "uutils", "cross-platform", "cli", "utility"]
categories = ["command-line-utilities"]

[dependencies]
uucore = { workspace = true }
clap = { workspace = true }

[lib]
path = "src/watch.rs"

[[bin]]
name = "watch"
path = "src/main.rs"
