[package]
name = "uu_watch"
description = "watch ~ (uutils) Execute a program periodically, showing output fullscreen"
repository = "https://github.com/uutils/procps/tree/main/src/uu/watch"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
uucore = { workspace = true }
clap = { workspace = true }

[lib]
path = "src/watch.rs"

[[bin]]
name = "watch"
path = "src/main.rs"
